--- a/.golangci.yml
+++ b/.golangci.yml
@@ -27,6 +27,10 @@ linters:
     - musttag
     - depguard
     - gochecknoglobals
+    - wrapcheck
+    - gochecknoinits
+    - gomnd
+    - errname
 
 issues:
   exclude-rules:
